--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Magazine</title>
+  <title>Threshold Magazine</title>
   <meta name="description" content="A clean starter site for your magazine." />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header class="sticky top-0 bg-white border-b border-slate-200">
     <div class="max-w-6xl mx-auto px-4 flex items-center justify-between h-16">
-      <a href="#home" class="text-xl font-bold">My Magazine</a>
+      <a href="#home" class="text-xl font-bold">Threshold Magazine</a>
       <nav class="hidden md:flex gap-6 text-sm">
         <a href="#about" class="hover:text-slate-900 text-slate-600">About</a>
         <a href="#issues" class="hover:text-slate-900 text-slate-600">Issues</a>
@@ -24,7 +24,7 @@
   <!-- Hero -->
   <section id="home" class="py-20 bg-slate-50">
     <div class="max-w-6xl mx-auto px-4 text-center">
-      <h1 class="text-4xl md:text-5xl font-extrabold">Welcome to My Magazine</h1>
+      <h1 class="text-4xl md:text-5xl font-extrabold">Welcome to Threshold Magazine</h1>
       <p class="mt-4 text-lg text-slate-600">A place for stories, poetry, and art that inspire.</p>
       <a href="#submissions" class="mt-8 inline-block px-6 py-3 bg-slate-900 text-white rounded-xl hover:bg-slate-800">Submit Your Work</a>
     </div>
@@ -55,7 +55,7 @@
   <section id="submissions" class="py-16">
     <div class="max-w-3xl mx-auto px-4 text-center">
       <h2 class="text-2xl font-bold">Submissions</h2>
-      <p class="mt-4 text-slate-600">We accept poetry, fiction, essays, and visual art. Submit your work via email at <a href="mailto:submissions@mymagazine.com" class="text-slate-900 underline">submissions@mymagazine.com</a>.</p>
+      <p class="mt-4 text-slate-600">We accept poetry, fiction, essays, and visual art. Submit your work via email at <a href="mailto:submissions@thresholdmagazine.ca" class="text-slate-900 underline">submissions@thresholdmagazine.ca</a>.</p>
     </div>
   </section>
 
@@ -63,13 +63,13 @@
   <section id="contact" class="py-16 bg-slate-50">
     <div class="max-w-3xl mx-auto px-4 text-center">
       <h2 class="text-2xl font-bold">Contact</h2>
-      <p class="mt-4 text-slate-600">Get in touch with us at <a href="mailto:info@mymagazine.com" class="text-slate-900 underline">info@mymagazine.com</a>.</p>
+      <p class="mt-4 text-slate-600">Get in touch with us at <a href="mailto:info@thresholdmagazine.ca" class="text-slate-900 underline">info@thresholdmagazine.ca</a>.</p>
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="py-6 border-t border-slate-200 text-center text-sm text-slate-500">
-    © 2025 My Magazine. All rights reserved.
+    © 2025 Henderson Publishing Inc. All rights reserved.
   </footer>
 </body>
 </html>
